tests/fixtures/valid/basic/simple.py
# Simple variable declaration and assignment
x: int = 42
y: int = x + 10

print(b"x:", x)
print(b"y:", y)
