tests/fixtures/invalid/divmod_bytes_bytes.py
# Cannot call divmod() with Bytes, Bytes
x = divmod(b"hello", b"hello")
